# backend

./: .coverage  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run.py  start.sh  test.db
.github/workflows/: ci.yml  trigger_retrain.yml
app/: main.py  params.py
app/alembic/: env.py
app/alembic/versions/: 04d4fde71b24_create_model_versions_table.py  0ae267eab3df_fill_episodes_table.py  1716e50a6773_fix_user_table_drop_password_attribute.py  32e0a7b83af2_create_user_episodes_validations_table.py  4d97e8a97167_seed_initial_patients.py  4e7935f1e8c0_backfill_insurance_reviews.py  60cc75192269_fix_user_patient_episod_tables.py  6839f4efda73_seed_admin_user.py  6e11cc700077_add_timestamps_to_user_episodes_.py  7792bf76040c_merge_heads.py  8791bf230a1c_add_insurance_review_table.py  ad5fb6362ef3_add_is_admin_and_turn_to_users_table.py  fbc1f0d2e1a2_init.py  (+11 more)
app/api/: router.py
app/core/: config.py
app/repositories/: __init__.py  diagnostic.py  doctor_summary.py  episode.py  insurance_repository.py  metric.py  model_versions.py  patient.py  user.py  user_episode_validation.py
app/schemas/: __init__.py  auth.py  diagnostic.py  doctor_summary.py  episode.py  episode_assigned_out.py  episode_team_doctor_out.py  episode_user.py  episode_validated_out.py  insurance.py  metric.py  patient.py  prediction.py  user.py  validation.py
app/services/: __init__.py  auth_service.py  insurance_service.py  prediction_service.py
ml_package/: README.md  pyproject.toml  setup.py
ml_package/saluai5_ml/: __init__.py
ml_package/saluai5_ml/data/: __init__.py
ml_package/saluai5_ml/data/processed/: preproc_data.csv
ml_package/saluai5_ml/data/raw/: initial_data.xlsx
ml_package/saluai5_ml/encoders/: __init__.py
ml_package/saluai5_ml/encoders_repository/categorical/: v1.pkl
ml_package/saluai5_ml/encoders_repository/dev/numerical/: dev_v1.pkl
ml_package/saluai5_ml/encoders_repository/prod/categorical/: prod_v2.pkl
ml_package/saluai5_ml/encoders_repository/prod/multilabel/: prod_v2.pkl  prod_v4.pkl
ml_package/saluai5_ml/encoders_repository/prod/numerical/: prod_v4.pkl
ml_package/saluai5_ml/inference_pipeline/: inference_engine.py
ml_package/saluai5_ml/inference_pipeline/artifacts/: loader.py
ml_package/saluai5_ml/inference_pipeline/data_ingestion/: loader.py
ml_package/saluai5_ml/inference_pipeline/data_preparation/: cleaner.py  encoder.py
ml_package/saluai5_ml/models/: __init__.py  utils.py
ml_package/saluai5_ml/models/random_forest/: inference.py  random_forest_model.pkl  train.py
ml_package/saluai5_ml/models/random_forest/metrics/: classification_report.csv  metrics.py
ml_package/saluai5_ml/models/xgboost/: inference.py  train.py
ml_package/saluai5_ml/models_repository/dev/: dev_v3.pkl
ml_package/saluai5_ml/models_repository/prod/: prod_v1.pkl  prod_v2.pkl  prod_v4.pkl
ml_package/saluai5_ml/preprocessing/: __init__.py  cleaner.py  transformer.py
ml_package/saluai5_ml/training_pipeline/: data_loader.py  data_preprocessor.py  orchestrator.py  traning_orchestrator.py  versioner.py
ml_package/saluai5_ml/training_pipeline/data_ingestion/: loader.py
ml_package/saluai5_ml/training_pipeline/data_preparation/: cleaner.py  encoder.py  splitter.py
ml_package/saluai5_ml/training_pipeline/model_training/: evaluator.py  trainer.py
repositories/: __init__.py  patient.py
schemas/: __init__.py  diagnostic.py  episode.py  patient.py  user.py
tests/: conftest.py  factories.py  test_auth.py  test_diagnostics.py  test_episodes.py  test_metrics.py  test_patients.py  test_prediction.py  test_predictions.py  test_users.py  test_validations.py  utils.py
(+56 files in other folders)
