[project]
name = "saluai5-backend"
version = "0.1.0"
description = "SALUAI 5 project backend."
authors = [
    {name = "JOSE",email = "jlhuerta@uc.cl"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    # Backend dependencies
    "bcrypt (==4.0.1)",
    "cryptography (>=45.0.7,<46.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic (>=2,<3)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic-settings (>=2.0,<3.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "faker (>=31.0.0,<32.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.3.2,<9.0.0)",
    "pytest-asyncio (>=0.23.8,<0.24.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "httpx (>=0.28.0,<0.29.0)",
    "aiosqlite (>=0.20.0,<0.21.0)",
    "factory-boy (>=3.3.1,<4.0.0)",
    "faker (>=31.0.0,<32.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "autoflake (>=2.3.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
